--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "framer-motion": "^11.11.17",
     "next": "14.2.18",
     "react": "^18",
-    "react-dom": "^18"
+    "react-audio-player": "^0.17.0",
+    "react-dom": "^18",
+    "sass": "^1.81.1"
   },
   "devDependencies": {
     "eslint": "^8",
